{
    "name": "FPS",
    "maps": [
        {
            "name": "DogMech",
            "id": "02dea3c5-b0f6-48cf-b789-86910693d632",
            "actions": [
                {
                    "name": "Front_Left",
                    "type": "Button",
                    "id": "29878668-f102-440c-9f23-70e587f5757f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.401298E-45,pressPoint=1.401298E-45)",
                    "initialStateCheck": false
                },
                {
                    "name": "Front_Right",
                    "type": "Button",
                    "id": "38035c51-6b6a-4f7b-8049-98408290a896",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back_Left",
                    "type": "Button",
                    "id": "b84b41d6-9344-4e9d-b3cb-b08879386192",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back_Right",
                    "type": "Button",
                    "id": "3a9f5ff1-c649-404c-8bf6-ff9706cda983",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Turn",
                    "type": "Value",
                    "id": "c13eb223-088f-484c-8cb5-4ebba84e6310",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Gun_Turn",
                    "type": "Value",
                    "id": "19ade2d4-34d0-42a4-890f-cad1f7284db1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Gun_Tilt",
                    "type": "Value",
                    "id": "a31487c8-c74c-43a7-a7cf-1c166f0f8c93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Reverse",
                    "type": "Button",
                    "id": "2bbdac8f-7d29-4f25-b14e-503cbb03b323",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "9b7a5184-7dfc-4de9-b99d-95ec70674108",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e9c6464-110c-4a3d-8aaf-e7e1db83a7dd",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Front_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "996893fe-de0d-4856-82d9-b8f647462caa",
                    "path": "<ArduinoDevice>/Button13",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Front_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c070afec-1aed-41d2-890d-d223656a8515",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Front_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c3c2fa0-9569-4a8c-bcbf-0f62fcf8d0df",
                    "path": "<ArduinoDevice>/Button14",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Front_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4082de32-0b84-4537-a383-dc1d23cced50",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99373592-ff53-4a14-97b8-86c2654441e2",
                    "path": "<ArduinoDevice>/Button15",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "800a0a0c-42eb-491b-9f8d-0b2aebd4c7e4",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6fc0b11-de55-4f53-b4af-025fd6a3bee9",
                    "path": "<ArduinoDevice>/Button12",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "ed5498c5-3a38-4996-80a3-1d7ac8ae3160",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3abab1bc-fb79-4cf6-9f69-76e4c6934782",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a08b6d4c-d1be-4ce9-9a01-9687c83bab2d",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arduino",
                    "id": "52f56b82-299f-4583-8401-587cd87fce07",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b3fdd0c5-8a27-4996-b60e-df47db9cc2ee",
                    "path": "<ArduinoDevice>/Button16",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "99f1e3ed-70d3-41ed-afd7-0a27600fc9b6",
                    "path": "<ArduinoDevice>/Button17",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9cda9db3-429c-4fcc-aa65-d1a34f60db13",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "4661ca2b-ebc3-4c19-941f-6705d7a721cc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gun_Turn",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "84c87112-7083-485c-893f-25b1baf45b47",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gun_Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b8f2a80c-27af-49f3-bd59-e4fbd389c285",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gun_Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d3a406bc-49cf-4fff-9840-238fde0edca5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "71cb4438-f31f-4f42-953e-9409c268cd0c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gun_Tilt",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1c04019c-6d2a-4223-b4ce-633cd23905ea",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gun_Tilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7191c207-30b0-454f-88e8-883e8d1321b2",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gun_Tilt",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}